<resources>
    <!-- INFO -->
    <string name="app_name">Путеводитель по первой мировой войне</string>
    <string name="img_description">IMG</string>

    <!-- LOGIN/REGISTER FRAGMENT -->
    <string name="prompt_login">Позывной</string>
    <string name="prompt_password">Пароль</string>
    <string name="prompt_repeat_password">Повторите пароль</string>
    <string name="prompt_remember_me">Запомнить меня</string>
    <string name="prompt_password_requirements">
        Требовани к паролю:
        \n- 1 строчный символ (п)
        \n- 1 прописной символ (П)
        \n- 1 спецсимвол (@, #, $, %, ^, +, =, _)
        \n- 1 цифра
        \n- не имеет пробела
        \n- минимум 6 символов
    </string>
    <string name="prompt_remember_me_info">
        Нажимая "Запомнить меня", ваши данные будут сохранены на устройстве,
        тем самым вы сможете использовать данное приложение без подключения к интернету
    </string>
    <string name="action_sign_in">Войти</string>
    <string name="action_registration">Регистрация</string>
    <string name="action_register">Зарегестрироваться</string>
    <string name="action_choose_side">Выберите сторону</string>
    <string name="action_to_login">На страницу входа</string>

    <!-- REG/LOGIN ERROR OCCURRED -->
    <string name="err_reg_invalid_username">Имя пользователя должно быть от 4-х до 48 символов!</string>
    <string name="err_reg_invalid_password">Пароль должен быть от 6-ти до 12-ти символов!</string>
    <string name="err_validation_password">Минимум 6 символов!</string>
    <string name="err_login_failed">"Ошибка входа"</string>
    <string name="err_reg_user_exist">Пользователь с таким позывным уже существует!</string>
    <string name="err_reg_failed">Ошибка регистрации</string>
    <string name="err_reg_mismatch_password">Пароли не совпадают!</string>
    <string name="err_login_wrong_user_login">Такого позывного нет!</string>
    <string name="err_login_wrong_user_password">Неверный пароль!</string>
    <string name="err_mismatch_data">Проверьте введённые данные!</string>

    <!-- SUCCESS LOGIN/REG -->
    <string name="success_registration">Регистрация прошла успешно!</string>
    <string name="success_login">Вход прошел успешно!</string>
    <string name="welcome">Добро пожаловать!</string>

    <!-- MAIN ACTIVITY -->
    <string name="prompt_retry">Повторить</string>
    <string name="prompt_exit">Выйти</string>
    <string name="prompt_no_internet_connection">Нет соединения с интернетом.
        \nПожалуйста, проверьте ваше подключение и попробуйте ещё раз.</string>
    <string name="prompt_first_launch_no_internet_connection">
        Для того, чтобы пользоваться приложением, необходимо подключится к интернету и зарегестрироваться.
        \n После регистрации интернет-соединение потребуется для синхронизации данных с сервером
    </string>

    <!-- USER FRAGMENT -->
    <string name="prompt_no_achievements">Пока что вы нигде не отличились…</string>
    <string name="prompt_log_out">Выйти в отпуск</string>
    <!-- EVENTS FRAGMENT -->
    <string name="prompt_no_surveys">Опросы можно проходить только с наличием связи со штабом (с наличием интернет-соединения)!</string>
    <string name="prompt_passed_survey">Вы ранее прошли данный опрос. Ответ на него уже записан в нашей бухгалтерии.</string>
    <string name="prompt_answered_survey">Ваше мнение учтётся в дальнейшем, ибо здесь оно имеет вес. Особенно для отдела разведки.</string>
    <!-- YEARS FRAGMENT -->
    <!-- TESTS FRAGMENT -->
    <string name="prompt_no_tests">Тесты можно проходить только с наличием связи со штабом (с наличием интернет-соединения)!</string>
    <string name="prompt_answer">Ответить</string>
    <string name="prompt_tests_success">Вы успешно прошли тест. Соответствующее достижение уже добавлено к вашему списку наград.</string>
    <string name="prompt_tests_failure">В следующий раз подготовьтесь лучше.</string>
    <string name="prompt_tests_rules">Правила прохождения тестов:
        \n1) Можно выбрать только 1 вариант ответа. После выбора варианта изменить его уже нельзя
        \n2) Для успешного завершения теста нужно ответить на половину имеющихся вопросов. Если их число нечетное, то округление идет в большую сторону
        \n3) Тест необходимо выполнить за отведённое время (120 секунд)
        \n4) После успешного выполнения теста он становится недоступным
    </string>
    <string name="prompt_info_btn">info_btn</string>
    <!-- Armament FRAGMENT -->
    <string name="prompt_weapon_category">Оружие</string>
    <string name="prompt_technique_category">Техника</string>
    <string name="prompt_technique_subcategory_aviation">Авиация</string>
    <string name="prompt_technique_subcategory_navy">Флот</string>
    <string name="prompt_technique_subcategory_ground">Наземная техника</string>

    <!-- BOTTOM NAV BAR -->
    <string name="nav_item_years">Года</string>
    <string name="nav_item_user_info">Досье</string>
    <string name="nav_item_weapons_and_technique">Вооружение</string>
    <string name="nav_item_tests">Тесты</string>
    <string name="nav_item_achievements">Достижения</string>

    <!-- OTHER -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id_for_spinner">0</string>
    <string name="test">test</string>

    <!-- LOREN IPSUM -->
    <string name="loren_ipsum_small">Lorem ipsum dolor sit amet.</string>
    <string name="loren_ipsum_medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nibh ante, pellentesque nec dictum ut, tincidunt quis turpis. Praesent condimentum odio in orci tincidunt, vitae commodo ligula laoreet. Ut vitae.</string>
    <string name="loren_ipsum_large">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lectus turpis, porta efficitur imperdiet nec, pretium eget mauris. Vivamus quis nisl vitae orci finibus vehicula. Quisque sodales id lectus ac finibus. Aenean accumsan nibh nec enim vulputate sollicitudin. Donec egestas sit amet nisi non congue. Nam blandit tellus nec rhoncus dignissim. In feugiat neque et lorem finibus pulvinar. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Quisque et risus in mauris dapibus pulvinar.</string>
</resources>