<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.fragments.LoginFragment"
    android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
    android:layout_marginVertical="@dimen/fragment_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/prompt_login"
            android:inputType="text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/prompt_password"
            android:inputType="textVisiblePassword" />

        <Button
            android:text="@string/action_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_registration" />

    </LinearLayout>


</FrameLayout>