<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="128dp"
    android:paddingLeft="@dimen/half_main_margin"
    android:paddingRight="@dimen/half_main_margin" >

    <ImageView
        android:id="@+id/item_achievement_img"
        android:layout_width="128dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/img_description"
        android:src="@drawable/square" />

    <TextView
        android:id="@+id/item_achievement_name"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/item_achievement_img"
        android:gravity="center"
        android:text="@string/loren_ipsum_small"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/item_achievement_description"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_below="@+id/item_achievement_name"
        android:layout_alignBottom="@id/item_achievement_img"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@id/item_achievement_img"
        android:gravity="center"
        android:text="@string/loren_ipsum_large"
        android:textSize="14sp" />

</RelativeLayout>