<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.RegisterFragment"
    android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
    android:layout_marginVertical="@dimen/fragment_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editLoginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/half_main_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_login_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_login"
                android:autofillHints="username"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginBottom="@dimen/half_main_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editRepPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginBottom="@dimen/half_main_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_rep_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_repeat_password"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_choose_side"
            android:textSize="21sp"/>

        <Spinner
            android:id="@+id/reg_country_spinner"

            android:background="@drawable/red_outline"
            android:popupBackground="@drawable/red_outline_white_background"
            android:spinnerMode="dropdown"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reg_register_button"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_register" />

    </LinearLayout>

</FrameLayout>
