<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph" />

    <ImageView
        android:id="@+id/activity_main_img"
        android:visibility="gone"
        android:src="@drawable/test_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/activity_main_text_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/img_description" />

    <TextView
        android:id="@+id/activity_main_text_prompt"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_main_img"
        android:textSize="@dimen/default_font_size"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:gravity="center"/>

    <Button
        android:visibility="gone"
        android:id="@+id/activity_main_retry_button"
        android:layout_width="@dimen/main_button_width"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/prompt_retry"
        app:layout_constraintTop_toBottomOf="@id/activity_main_text_prompt"/>

    <Button
        android:visibility="gone"
        android:id="@+id/activity_main_exit_button"
        android:layout_width="@dimen/main_button_width"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/prompt_exit"
        app:layout_constraintTop_toBottomOf="@id/activity_main_retry_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>